@@ -45,7 +45,7 @@ import org.cloudbus.cloudsim.UtilizationModelFull;
  * processor runs job #1 for 100 seconds, if the processors have the same specification.
  * </ul>
  *
- * @todo The last item in the list above is not true. The cloudlet length is not
+ * //TODO The last item in the list above is not true. The cloudlet length is not
  * divided by the number of PEs. If there is more than 1 PE, all PEs run the same
  * number of MI as specified in the {@link Cloudlet#cloudletLength} attribute.
  * See {@link Cloudlet#setNumberOfPes(int)} method documentation.
@@ -89,7 +89,7 @@ public class WorkloadFileReader implements WorkloadModel {
     /**
      * Field index of job number.
      */
-    private int JOB_NUM = 1 - 1; 
+    private int JOB_NUM = 0;
 
     /**
      * Field index of submit time of a job.
@@ -190,13 +190,13 @@ public class WorkloadFileReader implements WorkloadModel {
     @Override
     public ArrayList<Cloudlet> generateWorkload() {
             if (jobs == null) {
-                    jobs = new ArrayList<Cloudlet>();
+                    jobs = new ArrayList<>();
 
                     // create a temp array
                     fieldArray = new String[MAX_FIELD];
 
                     try {
-                            /*@todo It would be implemented
+                            /*//TODO It would be implemented
                             using specific classes to avoid using ifs.
                             If a new format is included, the code has to be
                             changed to include another if*/
@@ -207,7 +207,6 @@ public class WorkloadFileReader implements WorkloadModel {
                             } else {
                                     readFile(file);
                             }
-                    } catch (final FileNotFoundException e) {
                     } catch (final IOException e) {
                     }
             }
@@ -315,7 +314,7 @@ public class WorkloadFileReader implements WorkloadModel {
      * and the {@link #rating}, the {@link Cloudlet#cloudletLength} is computed.
      * @param numProc number of Cloudlet's PEs
      * @param reqRunTime user estimated run time 
-     * (@todo the parameter is not being used and it is not clear what it is)
+     * (//TODO the parameter is not being used and it is not clear what it is)
      * @param userID user id
      * @param groupID user's group id
      * @pre id >= 0
@@ -357,7 +356,7 @@ public class WorkloadFileReader implements WorkloadModel {
      * @param line the line number
      * @pre array != null
      * @pre line > 0
-     * @todo The name of the method doesn't describe what it in fact does.
+     * //TODO The name of the method doesn't describe what it in fact does.
      */
     private void extractField(final String[] array, final int line) {
             try {
@@ -368,25 +367,25 @@ public class WorkloadFileReader implements WorkloadModel {
                     if (JOB_NUM == IRRELEVANT) {
                             id = jobs.size() + 1;
                     } else {
-                            obj = new Integer(array[JOB_NUM].trim());
-                            id = obj.intValue();
+                            obj = Integer.valueOf(array[JOB_NUM].trim());
+                            id = obj;
                     }
 
                     // get the submit time
-                    final Long l = new Long(array[SUBMIT_TIME].trim());
-                    final long submitTime = l.intValue();
+                    final long l = Long.parseLong(array[SUBMIT_TIME].trim());
+                    final long submitTime = (int) l;
 
                     // get the user estimated run time
-                    obj = new Integer(array[REQ_RUN_TIME].trim());
-                    final int reqRunTime = obj.intValue();
+                    obj = Integer.valueOf(array[REQ_RUN_TIME].trim());
+                    final int reqRunTime = obj;
 
                     // if the required run time field is ignored, then use
                     // the actual run time
-                    obj = new Integer(array[RUN_TIME].trim());
-                    int runTime = obj.intValue();
+                    obj = Integer.valueOf(array[RUN_TIME].trim());
+                    int runTime = obj;
 
-                    final int userID = new Integer(array[USER_ID].trim()).intValue();
-                    final int groupID = new Integer(array[GROUP_ID].trim()).intValue();
+                    final int userID = Integer.parseInt(array[USER_ID].trim());
+                    final int groupID = Integer.parseInt(array[GROUP_ID].trim());
 
                     // according to the SWF manual, runtime of 0 is possible due
                     // to rounding down. E.g. runtime is 0.4 seconds -> runtime = 0
@@ -395,14 +394,14 @@ public class WorkloadFileReader implements WorkloadModel {
                     }
 
                     // get the number of allocated processors
-                    obj = new Integer(array[REQ_NUM_PROC].trim());
-                    int numProc = obj.intValue();
+                    obj = Integer.valueOf(array[REQ_NUM_PROC].trim());
+                    int numProc = obj;
 
                     // if the required num of allocated processors field is ignored
                     // or zero, then use the actual field
                     if (numProc == IRRELEVANT || numProc == 0) {
-                            obj = new Integer(array[NUM_PROC].trim());
-                            numProc = obj.intValue();
+                            obj = Integer.valueOf(array[NUM_PROC].trim());
+                            numProc = obj;
                     }
 
                     // finally, check if the num of PEs required is valid or not
@@ -463,25 +462,19 @@ public class WorkloadFileReader implements WorkloadModel {
      */
     private boolean readFile(final File fl) throws IOException, FileNotFoundException {
             boolean success = false;
-            BufferedReader reader = null;
-            try {
-                    reader = new BufferedReader(new InputStreamReader(new FileInputStream(fl)));
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(new FileInputStream(fl)))) {
 
-                    // read one line at the time
-                    int line = 1;
-                    String readLine = null;
-                    while (reader.ready() && (readLine = reader.readLine()) != null) {
-                            parseValue(readLine, line);
-                            line++;
-                    }
-
-                    reader.close();
-                    success = true;
-            } finally {
-                    if (reader != null) {
-                            reader.close();
-                    }
+            // read one line at the time
+            int line = 1;
+            String readLine = null;
+            while (reader.ready() && (readLine = reader.readLine()) != null) {
+                parseValue(readLine, line);
+                line++;
             }
+
+            reader.close();
+            success = true;
+        }
 
             return success;
     }
@@ -496,25 +489,19 @@ public class WorkloadFileReader implements WorkloadModel {
      */
     private boolean readGZIPFile(final File fl) throws IOException, FileNotFoundException {
             boolean success = false;
-            BufferedReader reader = null;
-            try {
-                    reader = new BufferedReader(new InputStreamReader(new GZIPInputStream(new FileInputStream(fl))));
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(new GZIPInputStream(new FileInputStream(fl))))) {
 
-                    // read one line at the time
-                    int line = 1;                       
-                    String readLine = null;
-                    while (reader.ready() && (readLine = reader.readLine()) != null) {
-                            parseValue(readLine, line);
-                            line++;
-                    }
-
-                    reader.close();
-                    success = true;
-            } finally {
-                    if (reader != null) {
-                            reader.close();
-                    }
+            // read one line at the time
+            int line = 1;
+            String readLine = null;
+            while (reader.ready() && (readLine = reader.readLine()) != null) {
+                parseValue(readLine, line);
+                line++;
             }
+
+            reader.close();
+            success = true;
+        }
 
             return success;
     }
